# project

./: .gitmodules  LICENSE  Makefile  README.md  project.ipynb  pyproject.toml
composer-classification/: __init__.py  dataset.py  features.py  plots.py
composer-classification/modeling/: predict.py  train.py
data/interim/csv/: bach-003806b.csv  bach-004003b.csv  bach-004106bs.csv  bach-004311b.csv  bach-004606b.csv  bach-004803b.csv  bach-005505b.csv  bach-005605b.csv  bach-005708b.csv  bach-006106b.csv  bach-006206b.csv  bach-006704b.csv  bach-006906b.csv  bach-007011ch.csv  bach-007206b.csv  bach-007305b.csv  bach-007408b.csv  bach-007706b.csv  bach-007906b.csv  bach-008008b.csv  bach-008305b.csv  bach-009106ch.csv  bach-009207b.csv  bach-009606b.csv  bach-010006b.csv  bach-010406b.csv  bach-010506b.csv  bach-011007b.csv  bach-011704v1.csv  bach-011909b.csv  bach-012506b.csv  bach-012606b.csv  bach-012606bv.csv  bach-012905b.csv  bach-013006b.csv  bach-013506b.csv  bach-013702b.csv  bach-013703b.csv  bach-013705ch.csv  bach-013807b.csv  (+850 more)
data/processed/: midi_features_raw.csv
docs/: features.md  mkdocs.yml
docs/docs/: index.md
notebooks/: Project_Notebook_TeamX.ipynb  midi2csv.ipynb
